--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 VSCODE_PATH=C:\\\\Users\\\\YourName\\\\AppData\\\\Local\\\\Programs\\\\Microsoft VS Code\\\\Code.exe # you can skip this if you dont use vs code
-PYCHARM_PATH=C:\\\\Program Files\\\\JetBrains\\\\PyCharm Community Edition 2023.1\\\\bin\\\\pycharm64.exe # you can skip this if you dont use pycharm
 WEATHER_API=your_openweather_api_key # obtain it from https://www.weatherapi.com/
 CITY=California # your city name to get weather
 MUSIC_DIR_PATH=C:\\\\Users\\\\YourName\\\\Music # your music directory path
+COHERE_API_KEY=your_cohere_api_key # obtain it from https://cohere.com/
